grammar.js
    source_code: ($) => repeat(choice($._statement, $.class_statement, $._definition, $.do_block, $.interface_statement, $.method_statement, $.constant)),

    
    body: ($) => seq(":", repeat(choice($._statement, $._definition, $.do_block, prec(-1, $.annotation)))),

    _terminator: ($) => /\s*\./,

    _block_terminator: ($) =>
      seq(
        kw("END"),
        optional(
          choice(
            kw("FUNCTION"),
            kw("PROCEDURE"),
            kw("CASE"),
            kw("CLASS"),
            kw("ENUM"),
            kw("INTERFACE"),
            kw("CONSTRUCTOR"),
            kw("DESTRUCTOR"),
            kw("CATCH"),
            kw("FINALLY")
          )
        ),
        "."
      ),

    // OPERATORS

    _name: ($) => choice($.identifier, $.qualified_name),

    file_name: ($) => /[A-z-_|0-9|\/]+\.[ipwr]/i,

    // TODO: FIX
    comment: ($) =>
      choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
    // Note: This was initial solution for comments inside comments. Does not work
    //  choice(
    //     seq("//", /.*/),
    //     seq("/*", repeat(choice(/[^*]/, /\*+[^/*]/)), /\*+\//)
    //   ),

    annotation: ($) =>
      seq(
        "@",
        choice(
          seq(kw("TEST"), optional($.annotation_argument)),
          seq(kw("TESTSUITE"), optional($.annotation_argument)),
          kw("BEFORE"),
          kw("BEFOREALL"),
          kw("BEFOREEACH"),
          kw("SETUP"),
          kw("AFTEREACH"),
          kw("TEARDOWN"),
          kw("AFTERALL"),
          kw("AFTER"),
          kw("IGNORE"),
          //These are extra annotations that we added for the OpenEdge ABL Formatter.
          //For more details, please visit: https://marketplace.visualstudio.com/items?itemName=BalticAmadeus.openedge-abl-formatter
          kw("ABLFORMATTEREXCLUDESTART"),
          kw("ABLFORMATTEREXCLUDEEND"),
        ),
        $._terminator
      ),

    preprocessor_directive: ($) =>
      seq(
        "&",
        token(
          choice(
            seq(
              /[^\n~]+/,
              repeat(seq("~", /\s*\n/, /[^\n~]*/))
            ),
            seq(
              kw("IF"),
              /[^\n]*/,
              repeat(seq(/\n/, /[^\n]*/)),
              /\n\s*/,
              "&", kw("ENDIF")
            )
          ),
        )
      ),

    _integer_literal: ($) => /[0-9]+/,

    _decimal_literal: ($) =>
      seq($._integer_literal, alias($._namedot, "."), $._integer_literal),

    number_literal: ($) => choice($._integer_literal, $._decimal_literal),

    string_literal: ($) => seq($._escaped_string, optional(seq(":", $.string_literal_attribute))),

    array_literal: ($) =>
      seq(
        "[",
        optional($._array_literal_body),
        "]"
      ),

    _array_literal_body: ($) =>
      choice(
        $.range_notation,
        _list($._array_literal_member, ",")
      ),

    _define: ($) =>
      choice(
        kw("DEFINE"),
        alias($._def_keyword, "DEF"),
      ),

    // INCLUDES

    include_argument: ($) =>
      choice(
        seq(
          "&",
          field("name", $.identifier),
          "=",
          field("value", $.string_literal)
        ),
        field("name", $.identifier),
        field("value", $.string_literal),
        $.constant,
        $.identifier
      ),

    include: ($) =>
      prec.right(1, seq(
        "{",
        choice(
          $.file_name,
          prec(1, alias($.include_file_path, $.file_name)),
          $.identifier
        ),
        repeat($.include_argument),
        "}"
      )),

    identifier: ($) => /[A-Z|a-z|\-|\\_]{1}[#+&A-Z|a-z|\-|\\_|0-9]*/i,

    // variable_name: ($) => choice(
    //   $.identifier,
    //   seq($.identifier, "&")
    // ),

    constant: ($) =>
      seq("{", optional("&"), $._constant_value, "}"),

    _constant_value: ($) => choice(
      $.identifier, 
      $._integer_literal,
      seq($.identifier, "=", choice($.identifier, $._integer_literal, $.string_literal)),
      seq($.identifier, repeat1(choice(/[\s\-()a-zA-Z0-9]+/)))
    ),

    qualified_name: ($) =>
      seq(
        $.identifier,
        repeat1(seq(alias($._namedot, "."), choice($.identifier, "*")))
      ),

    // TUNING

    _tuning: ($) =>
      choice(
        $.access_tuning,
        $.scope_tuning,
        $.member_modifier,
        $.constant
      ),

    // TODO: Fix! HACK: progress spaghetti allows to define tuning order before where clause
    // Leaving this here, just in case if it has to be reverted
    // _pre_tuning: ($) => prec.right(1, $.query_tuning),

    access_tuning: ($) =>
      choice(
        kw("PRIVATE"),
        kw("PROTECTED"),
        kw("PUBLIC"),
        kw("PACKAGE-PRIVATE"),
        kw("PACKAGE-PROTECTED")
      ),

    field_option: ($) =>
      choice(
        $._column_label,
        // $._dcolor,
        $._label,
        $._format,
        $._value_tuning,
        $._font,
        // $._fgcolor,
        // $._pfcolor,
        kw("SERIALIZE-HIDDEN"),
        $._serialize_name,
        // seq(kw("XML-DATA-TYPE"), $.string_literal),
        // seq(kw("XML-NODE-TYPE"), $.string_literal),
        // seq(kw("XML-NODE-NAME"), $.string_literal),
        seq(kw("HELP"), $.string_literal),
        seq(optional(kw("NOT")), kw("CASE-SENSITIVE")),
        seq(kw("MOUSE-POINTER"), $.identifier),
        // kw("TTCODEPAGE"),
        // seq(kw("COLUMN-CODEPAGE"), $.string_literal)
      ),

    parameter_tuning: ($) =>
      choice(
        kw("APPEND"),
        kw("BIND"),
        kw("BY-VALUE"),
        kw("BY-REFERENCE"),
        $._extent
      ),

    index_tuning: ($) =>
      seq(
        optional(choice(kw("IS"), kw("AS"))),
        choice(
          kw("PRIMARY"),
          kw("UNIQUE"),
          kw("WORD-INDEX")
        )
      ),

    _value_tuning: ($) =>
      choice(
        $._initial,
        seq(kw("DECIMALS"), $.number_literal),
        $._extent,
        kw("NO-UNDO")
      ),

    query_definition_tuning: ($) =>
      choice(
        seq(kw("FIELDS"), $.query_fields),
        seq(kw("EXCEPT"), $.query_fields),
        seq(kw("CACHE"), $.number_literal),
        kw("SCROLLING"),
        kw("RCODE-INFORMATION")
      ),

    scope_tuning: ($) =>
      choice(alias($._new_keyword, "NEW"), kw("GLOBAL"), kw("SHARED"), kw("STATIC")),

    serialization_tuning: ($) =>
      choice(kw("SERIALIZABLE"), kw("NON-SERIALIZABLE")),

    sort_order: ($) =>
      choice(kw("ASCENDING"), kw("DESCENDING"), kw("DESC"), kw("ASC")),

    temp_table_tuning: ($) =>
      choice(
        kw("NO-UNDO"),
        // seq(kw("NAMESPACE-URI"), $.string_literal),
        // seq(kw("NAMESPACE-PREFIX"), $.string_literal),
        // seq(kw("XML-NODE-NAME"), $.string_literal),
        $._serialize_name,
        kw("REFERENCE-ONLY"),
        $.like_phrase,
        kw("RCODE-INFORMATION"),
        seq(kw("BEFORE-TABLE"), $.identifier),
        $.constant
      ),

    type_tuning: ($) =>
      choice(
        seq(kw("AS"), field("type", choice($._type, $.string_literal))),
        seq(kw("LIKE"), field("type", choice($._type, $.string_literal)))
      ),

    variable_tuning: ($) =>
      choice(
        $._serialize_name,
        // $._bgcolor,
        // $._fgcolor,
        // $._pfcolor,
        // $._dcolor,
        // $._context_help_id,
        $._value_tuning,
        $._format,
        $._font,
        $._label,
        seq(kw("MOUSE-POINTER"), $.identifier),
        $._column_label,
        // kw("DROP-TARGET"),
        seq(optional(kw("NOT")), kw("CASE-SENSITIVE")),
      ),

    // TYPES

    _type: ($) =>
      choice(
        $.primitive_type,
        $.identifier,
        $.qualified_name,
        $.class_type,
        $.generic_type
      ),

    primitive_type: ($) =>
      choice(
        kw("VOID"),
        kw("LOGICAL"),
        kw("INTEGER"),
        kw("INT"),
        kw("CHARACTER"),
        kw("CHAR"),
        kw("DECIMAL"),
        kw("DATE"),
        kw("DATETIME"),
        kw("DATETIME-TZ"),
        kw("INT64"),
        kw("LONGCHAR"),
        kw("MEMPTR"),
        kw("RAW"),
        kw("RECID"),
        kw("ROWID"),
        kw("HANDLE"),
        kw("COM-HANDLE")
      ),

    class_type: ($) => seq(kw("CLASS"), $._name),

    return_type: ($) =>
      seq(choice(kw("RETURNS"), alias($._return_keyword, "RETURN")), field("type", $._type)),

    query_fields: ($) => seq("(", repeat1($.identifier), ")"),

    argument_mode: ($) =>
      prec.right(
        choice(
          alias($._input_keyword, "INPUT"),
          alias($._output_keyword, "OUTPUT"),
          kw("INPUT-OUTPUT"),
          kw("DATA-SOURCE"))
      ),

      // TODO: Refactor
    function_parameter: ($) =>
      choice(
        seq(
          repeat(
            choice(
              $.argument_mode,
              $._table_option
            )
          ),
          field("name", $.identifier),
          optional($.type_tuning),
          repeat($.parameter_tuning)
        ),
        seq(
          kw("BUFFER"),
          field("buffer", $.identifier),
          alias($._for_keyword, "FOR"),
          field("table", $._name),
          optional(kw("PRESELECT"))
        )
      ),

    annotation_argument: ($) =>
      seq(
        "(",
        $.identifier,
        "=",
        $.string_literal,
        ")"
      ),

    field_clause: ($) =>
      seq(alias($._field_keyword, "FIELD"), $.identifier, $.type_tuning, repeat($.field_option)),

    index_clause: ($) =>
      seq(
        alias($._index_keyword, "INDEX"),
        $.identifier,
        repeat($.index_tuning),
        repeat(seq(field("field", $.identifier), optional($.sort_order)))
      ),

    view_as_phrase: ($) =>
      seq(
        kw("VIEW-AS"),
        choice(
          $.combo_box_phrase,
          // $.editor_phrase,
          $.radio_set_phrase,
          // $.selection_list_phrase,
          // $.slider_phrase,
          // seq(
          //   kw("FILL-IN"),
          //   repeat(
          //     choice(
          //       kw("NATIVE"),
          //       $.size_phrase,
          //       $._tooltip
          //     )
          //   )
          // ),
          seq(
            kw("TEXT"),
            // repeat(choice(kw("NATIVE"), $.size_phrase, $._tooltip))
          ),
          // seq(kw("TOGGLE-BOX"), repeat(choice(kw("NATIVE"), $.size_phrase, $._tooltip))),
        )
      ),

      size_phrase: ($) =>
        seq(
          choice(
            kw("SIZE"),
            kw("SIZE-CHARS"),
            kw("SIZE-PIXELS"),
            kw("IMAGE-SIZE"),
            kw("IMAGE-SIZE-CHARS"),
            kw("IMAGE-SIZE-PIXELS")
          ),
          field("width", $.number_literal),
          kw("BY"),
          field("height", $.number_literal)
        ),

    _column_label: ($) => seq(kw("COLUMN-LABEL"), $.string_literal),

    // _context_help_id: ($) => seq(kw("CONTEXT-HELP-ID"), $._integer_literal),

    // _dcolor: ($) => seq(kw("DCOLOR"), $._integer_literal),

    // _decimals: ($) => seq(kw("DECIMALS"), $.number_literal),

    _extent: ($) => seq(kw("EXTENT"), $.number_literal),

    // _fgcolor: ($) => seq(kw("FGCOLOR"), $._integer_literal),

    _font: ($) => seq(kw("FONT"), $._integer_literal),

    _format: ($) => seq(kw("FORMAT"), $.string_literal),

    _label: ($) => seq(kw("LABEL"), _list($.string_literal, ",")),

    _serialize_name: ($) => seq(kw("SERIALIZE-NAME"), $.string_literal),

    // _tooltip: ($) => seq(kw("TOOLTIP"), $.string_literal),

    // DEFINITIONS

    _definition: ($) =>
      choice(
        $.variable_definition,
        $.buffer_definition,
        $.browse_definition,
        // $.button_definition,
        $.query_definition,
        $.rectangle_definition,
        $.temp_table_definition,
        $.workfile_definition,
        $.property_definition,
        $.data_source_definition,
        $.event_definition,
        $.dataset_definition,
        $.stream_definition,
        // $.image_definition,
        $.frame_definition,
        $.parameter_definition
      ),

    buffer_definition: ($) =>
      seq(
        $._define,
        repeat($._tuning),
        kw("BUFFER"),
        field("name", $.identifier),
        alias($._for_keyword, "FOR"),
        optional(kw("TEMP-TABLE")),
        field("table", $._name),
        $._terminator
      ),

    // button_definition: ($) =>
    //   seq(
    //     $._define,
    //     repeat($._tuning),
    //     kw("BUTTON"),
    //     field("name", $.identifier),
    //     repeat($.button_tuning),
    //   ),

    parameter_definition: ($) =>
      seq(
        $._define,
        optional(
          choice(alias($._input_keyword, "INPUT"), alias($._output_keyword, "OUTPUT"), kw("INPUT-OUTPUT"), alias($._return_keyword, "RETURN"))
        ),
        choice(kw("PARAMETER"), kw("PARAM")),
        optional($._parameter_definition_option),
        optional(alias($._for_keyword, "FOR")),
        field("name", $.identifier),
        choice(
          seq($.type_tuning, repeat($.variable_tuning)),
          repeat($.parameter_tuning)
        ),
        $._terminator
      ),

    _table_option: ($) =>
      choice(
        kw("TABLE"),
        kw("TABLE-HANDLE"),
        kw("DATASET-HANDLE"),
        kw("DATASET")
      ),

    _parameter_definition_option: ($) =>
      choice(
        seq(kw("BUFFER"), field("buffer", $.identifier)),
        kw("TABLE"),
        kw("TABLE-HANDLE"),
        seq(kw("DATASET"), optional(token.immediate(kw("-HANDLE"))))
      ),

    query_definition: ($) =>
      seq(
        $._define,
        repeat($._tuning),
        kw("QUERY"),
        field("name", $.identifier),
        alias($._for_keyword, "FOR"),
        $.identifier,
        repeat($.query_definition_tuning),
        $._terminator
      ),

    stream_definition: ($) =>
      seq(
        $._define,
        repeat($._tuning),
        kw("STREAM"),
        field("name", $.identifier),
        $._terminator
      ),

    temp_table_definition: ($) =>
      seq(
        $._define,
        repeat($._tuning),
        optional($.serialization_tuning),
        kw("TEMP-TABLE"),
        field("name", $.identifier),
        repeat($.temp_table_tuning),
        repeat($._temp_table_member),
        $._terminator
      ),

    _temp_table_member: ($) =>
      choice(
        $.field_clause,
        $.index_clause,
        $.include
      ),

    variable_definition: ($) =>
      seq(
        $._define,
        repeat($._tuning),
        choice(kw("VARIABLE"), alias($._var_keyword, "VAR")),
        field("name", $.identifier),
        $.type_tuning,
        repeat(
          choice(
            $.variable_tuning,
            $.view_as_phrase
          )),
        $._terminator
      ),

    class_statement: ($) =>
      seq(
        kw("CLASS"),
        field("name", choice($.string_literal, $._name)),
        repeat($.class_tuning),
        alias($.class_body, $.body),
        $._block_terminator
      ),

    method_statement: ($) =>
      seq(
        kw("METHOD"),
        repeat($._tuning),
        alias($._type, $.return_type),
        optional($._extent),
        field("name", $.identifier),
        alias($.function_parameters, $.parameters),
        optional(seq($.body, kw("END"), optional(kw("METHOD")))),
        $._terminator
      ),

    procedure_statement: ($) =>
      seq(
        kw("PROCEDURE"),
        $.identifier,
        optional(kw("PRIVATE")),
        optional($.body),
        $._block_terminator
      ),

    abl_statement: ($) =>
      seq(
        field("statement", $.identifier),
        repeat(prec(-1, $._expression)),
        $._terminator
      ),

    null_expression: ($) => /\?/,
