test/corpus/definitions.txt
================================================================================
VARIABLE DEFINITION statement
================================================================================

DEFINE VARIABLE full_variable AS INTEGER.
DEFINE VAR  full_var AS INTEGER.

DEF VARIABLE short_variable AS INTEGER.
DEF VAR short_var AS INTEGER.

DEFINE VARIABLE no_undo AS INTEGER NO-UNDO.
DEFINE VARIABLE initial AS INTEGER INITIAL ?.

DEFINE VARIABLE clone LIKE short_variable.

DEFINE VARIABLE ojb AS Progress.Json.ObjectModel.JsonObject NO-UNDO.

DEFINE VARIABLE cls AS CLASS CustomClass.

DEFINE VARIABLE credit-percent AS INTEGER NO-UNDO
  COLUMN-LABEL "Enter   !percentage!increase ".

DEFINE VARIABLE array-var AS CHARACTER NO-UNDO EXTENT 3
  INITIAL ["Add","Delete","Update"].

DEFINE VARIABLE clubs AS CHARACTER NO-UNDO
  VIEW-AS SELECTION-LIST SIZE 20 BY 5 MULTIPLE SCROLLBAR-VERTICAL NO-DRAG
    LIST-ITEMS "One Iron", "Two Iron", "Three Iron", "Four Iron",
               "Five Iron", "Six Iron", "Seven Iron", "Eight Iron",
               "Nine Iron", "Pitching Wedge"
  LABEL "Golf Clubs Available".

--------------------------------------------------------------------------------

(source_code
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type)))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type)))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type)))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type)))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type))
    (variable_tuning))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type))
    (variable_tuning
      (null_expression)))
  (variable_definition
    (identifier)
    (type_tuning
      (identifier)))
  (variable_definition
    (identifier)
    (type_tuning
      (qualified_name
        (identifier)
        (identifier)
        (identifier)
        (identifier)))
    (variable_tuning))
  (variable_definition
    (identifier)
    (type_tuning
      (class_type
        (identifier))))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type))
    (variable_tuning)
    (variable_tuning
      (string_literal)))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type))
    (variable_tuning)
    (variable_tuning
      (number_literal))
    (variable_tuning
      (array_literal
        (string_literal)
        (string_literal)
        (string_literal))))
  (variable_definition
    (identifier)
    (type_tuning
      (primitive_type))
    (variable_tuning)
    (view_as_phrase
      (selection_list_phrase
        (size_phrase
          (number_literal)
          (number_literal))
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)
        (string_literal)))
    (variable_tuning
      (string_literal))))

================================================================================
BUFFER DEFINITION statement
================================================================================

DEFINE BUFFER x-table FOR table.

--------------------------------------------------------------------------------

(source_code
  (buffer_definition
    (identifier)
    (identifier)))

================================================================================
IMAGE DEFINITION statement
================================================================================

DEFINE IMAGE myImage SIZE 5 BY 5 CONVERT-3D-COLORS.

--------------------------------------------------------------------------------

(source_code
  (image_definition
    name: (identifier)
    (size_phrase
      width: (number_literal)
      height: (number_literal))
    (image_tuning)))

================================================================================
QUERY DEFINITION statement
================================================================================

DEFINE QUERY q1 FOR tr_hist FIELDS (name balance) EXCEPT (something else lol) SCROLLING.

--------------------------------------------------------------------------------

(source_code
  (query_definition
    (identifier)
    (identifier)
    (query_definition_tuning
      (query_fields
        (identifier)
        (identifier)))
    (query_definition_tuning
      (query_fields
        (identifier)
        (identifier)
        (identifier)))
    (query_definition_tuning)))

================================================================================
STREAM DEFINITION statement
================================================================================

DEFINE GLOBAL SHARED STREAM i.

DEFINE NEW SHARED STREAM o.

--------------------------------------------------------------------------------

(source_code
  (stream_definition
    (scope_tuning)
    (scope_tuning)
    name: (identifier))
  (stream_definition
    (scope_tuning)
    (scope_tuning)
    name: (identifier)))

================================================================================
TEMP-TABLE DEFINITION statement
================================================================================

DEFINE NEW GLOBAL PRIVATE SERIALIZABLE TEMP-TABLE temp-item NO-UNDO REFERENCE-ONLY
  FIELD cat-page  LIKE Item.CatPage
  FIELD inventory LIKE Item.Price LABEL "Inventory Value"
  INDEX cat-page  IS PRIMARY cat-page ASCENDING
  INDEX inventory-value inventory DESCENDING.

DEFINE TEMP-TABLE foo
  FIELD a AS CHARACTER
  FIELD b AS CHARACTER
  FIELD c AS CHARACTER
  INDEX x a DESC b DESC c DESC
.

DEFINE TEMP-TABLE temp-item NO-UNDO SERIALIZE-NAME "theName" {1}
  FIELD cat-page  LIKE Item.CatPage
  FIELD inventory LIKE Item.Price CASE-SENSITIVE
  {schema/entity.i}
  INDEX cat-page  IS PRIMARY cat-page ASCENDING
  INDEX inventory-value inventory DESCENDING.

--------------------------------------------------------------------------------

(source_code
  (temp_table_definition
    (scope_tuning)
    (scope_tuning)
    (access_tuning)
    (serialization_tuning)
    (identifier)
    (temp_table_tuning)
    (temp_table_tuning)
    (field_clause
      (identifier)
      (type_tuning
        (qualified_name
          (identifier)
          (identifier))))
    (field_clause
      (identifier)
      (type_tuning
        (qualified_name
          (identifier)
          (identifier)))
      (field_option
        (string_literal)))
    (index_clause
      (identifier)
      (index_tuning)
      (identifier)
      (sort_order))
    (index_clause
      (identifier)
      (identifier)
      (sort_order)))
  (temp_table_definition
    (identifier)
    (field_clause
      (identifier)
      (type_tuning
        (primitive_type)))
    (field_clause
      (identifier)
      (type_tuning
        (primitive_type)))
    (field_clause
      (identifier)
      (type_tuning
        (primitive_type)))
    (index_clause
      (identifier)
      (identifier)
      (sort_order)
      (identifier)
      (sort_order)
      (identifier)
      (sort_order)))
  (temp_table_definition
    (identifier)
    (temp_table_tuning)
    (temp_table_tuning
      (string_literal))
    (temp_table_tuning
      (constant))
    (field_clause
      (identifier)
      (type_tuning
        (qualified_name
          (identifier)
          (identifier))))
    (field_clause
      (identifier)
      (type_tuning
        (qualified_name
          (identifier)
          (identifier)))
      (field_option))
    (include
      (file_name))
    (index_clause
      (identifier)
      (index_tuning)
      (identifier)
      (sort_order))
    (index_clause
      (identifier)
      (identifier)
      (sort_order))))

================================================================================
PROCEDURE PARAMETER DEFINITION statement
================================================================================

DEFINE INPUT-OUTPUT PARAMETER TABLE-HANDLE hNode.
DEFINE OUTPUT PARAMETER TABLE-HANDLE hData.
DEFINE OUTPUT PARAMETER TABLE-HANDLE hSchema.
DEFINE INPUT PARAMETER DATASET-HANDLE hDset.
DEFINE OUTPUT PARAMETER TABLE-HANDLE ttHandle.

DEFINE INPUT PARAMETER TABLE FOR ttCustomer.
DEFINE OUTPUT PARAMETER TABLE FOR ttOrder APPEND.
DEFINE INPUT-OUTPUT PARAMETER TABLE FOR ttProduct BIND.
DEFINE INPUT PARAMETER TABLE-HANDLE hCustomer.
DEFINE OUTPUT PARAMETER TABLE-HANDLE hOrder BY-VALUE.
DEFINE INPUT-OUTPUT PARAMETER TABLE-HANDLE hProduct BIND BY-VALUE.
DEFINE INPUT PARAMETER DATASET FOR dsCustomer.
DEFINE OUTPUT PARAMETER DATASET FOR dsOrder APPEND.
DEFINE INPUT-OUTPUT PARAMETER DATASET FOR dsProduct BIND.
DEFINE INPUT PARAMETER DATASET-HANDLE hCustomer.
DEFINE OUTPUT PARAMETER DATASET-HANDLE hOrder BY-VALUE.
DEFINE INPUT-OUTPUT PARAMETER DATASET-HANDLE hProduct BIND BY-VALUE.
DEFINE PARAMETER BUFFER bBuf FOR field.
DEFINE INPUT PARAMETER DATASET FOR field.

--------------------------------------------------------------------------------

(source_code
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier)
    (parameter_tuning)
    (parameter_tuning))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier))
  (parameter_definition
    (identifier)
    (parameter_tuning))
  (parameter_definition
    (identifier)
    (parameter_tuning)
    (parameter_tuning))
  (parameter_definition
    (identifier)
    (identifier))
  (parameter_definition
    (identifier)))